--- a/Metodologie.ipynb
+++ b/Metodologie.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "id": "770e918d",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Attaching package: 'dplyr'\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
       "\n",
       "Attaching package: 'MASS'\n",
       "\n",
@@ -36,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "id": "f22d5b5c",
    "metadata": {},
    "outputs": [],
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "id": "fb5f0e91",
    "metadata": {},
    "outputs": [
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "id": "096c0741",
    "metadata": {},
    "outputs": [
@@ -275,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "id": "1f0df0da",
    "metadata": {},
    "outputs": [
@@ -313,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "id": "f8edff28",
    "metadata": {},
    "outputs": [
@@ -346,16 +357,12 @@
    "id": "e90a4aa5",
    "metadata": {},
    "source": [
-    "Při použití oboustranného t-testu jsme vyvrátili nulovou hypotézu.\n",
-    "\n",
-    "Při použití jednostranného t-testu jsme nedokázali vyvrátit nulovou hypotézu, že dynamometr plantární flexe PDK před terapií bude nabývat stejných či vyšších hodnot než po terapii. \n",
-    "\n",
-    "Vyvrátili jsme nulovou hypotézu u jednostranného t-testu s opačnou nulovou hypotézou, což nás vede k závěru, že dynamometr plantární flexe PDK je po terapii nižší než před ní."
+    "Pokládáme nulovou hypotézu, že dynamometr plantární flexe PDK je před terapií nižší nebo roven než po terapii. Tuto hypotézu vyvracíme, tedy můžeme tvrdit, že dynamometr platární flexe PDK je před terapií vyšší než po terapii."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "id": "e1c75d4d",
    "metadata": {},
    "outputs": [
@@ -388,16 +395,12 @@
    "id": "7942e45c",
    "metadata": {},
    "source": [
-    "Při použití oboustranného t-testu jsme vyvrátili nulovou hypotézu.\n",
-    "\n",
-    "Při použití jednostranného t-testu jsme nedokázali vyvrátit nulovou hypotézu, že dynamometr dorsální flexe PDK před terapií bude nabývat stejných či vyšších hodnot než po terapii. \n",
-    "\n",
-    "Vyvrátili jsme nulovou hypotézu u jednostranného t-testu s opačnou nulovou hypotézou, což nás vede k závěru, že dynamometr dorsální flexe PDK je po terapii nižší než před ní."
+    "Pokládáme nulovou hypotézu, že dynamometr dorzální flexe PDK je před terapií nižší než po terapii. Tuto hypotézu vyvracíme, tedy máme dostatek důkazů pro tvrzení, že dynamometr dorzální flexe je před terapiíí vyšší než po terapii."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "id": "1fc3f287",
    "metadata": {},
    "outputs": [
@@ -459,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 9,
    "id": "074df8eb",
    "metadata": {},
    "outputs": [
@@ -488,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 10,
    "id": "b9b0329c",
    "metadata": {
     "scrolled": true
@@ -519,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
    "id": "f323dc1b",
    "metadata": {},
    "outputs": [
@@ -548,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "id": "933d2826",
    "metadata": {},
    "outputs": [
@@ -577,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 13,
    "id": "93434c01",
    "metadata": {},
    "outputs": [
@@ -614,99 +617,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 22,
    "id": "daf2fa76",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table>\n",
-       "<thead><tr><th scope=col>gonio plantární flexe P</th><th scope=col>gonio plantární flexe L</th><th scope=col>gonio dorsání flexe P</th><th scope=col>gonio dorsání flexe L</th><th scope=col>tloušťka plantární fascie (podélné) P</th><th scope=col>tloušťka plantární fascie (podélné) L</th><th scope=col>dynamometr plantární flexe P</th><th scope=col>dynamometr plantární flexe L</th><th scope=col>dynamometr dorsální flexe P</th><th scope=col>dynamometr dorsální flexe L</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>  2       </td><td>  4       </td><td> 3        </td><td>-1        </td><td> 0.74     </td><td> 1.01     </td><td>0.46666667</td><td> 2.4333333</td><td> 0.9000000</td><td> 2.333333 </td></tr>\n",
-       "\t<tr><td>  5       </td><td>  2       </td><td>-3        </td><td>-8        </td><td>-0.09     </td><td>-0.40     </td><td>0.50000000</td><td>-0.5000000</td><td>-2.1000000</td><td> 0.200000 </td></tr>\n",
-       "\t<tr><td>  0       </td><td> -4       </td><td>-3        </td><td> 1        </td><td>-0.25     </td><td>-0.34     </td><td>1.93333333</td><td> 2.8666667</td><td> 0.6333333</td><td> 3.866667 </td></tr>\n",
-       "\t<tr><td>  0       </td><td> -5       </td><td> 0        </td><td> 0        </td><td>-0.25     </td><td> 0.00     </td><td>2.30000000</td><td>-0.6666667</td><td> 3.2666667</td><td> 2.933333 </td></tr>\n",
-       "\t<tr><td>-20       </td><td>-11       </td><td>-3        </td><td>-2        </td><td> 0.41     </td><td> 0.08     </td><td>0.06666667</td><td> 0.2333333</td><td>-1.2000000</td><td>-0.900000 </td></tr>\n",
-       "\t<tr><td>  0       </td><td>  1       </td><td>-2        </td><td>-4        </td><td> 0.58     </td><td> 0.18     </td><td>2.03333333</td><td> 0.3666667</td><td> 1.7000000</td><td> 1.333333 </td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
+       "<ol class=list-inline>\n",
+       "\t<li>'gonio plantární flexe P'</li>\n",
+       "\t<li>'gonio plantární flexe L'</li>\n",
+       "\t<li>'gonio dorsání flexe P'</li>\n",
+       "\t<li>'gonio dorsání flexe L'</li>\n",
+       "\t<li>'tloušťka plantární fascie (podélné) P'</li>\n",
+       "\t<li>'tloušťka plantární fascie (podélné) L'</li>\n",
+       "\t<li>'dynamometr plantární flexe P'</li>\n",
+       "\t<li>'dynamometr plantární flexe L'</li>\n",
+       "\t<li>'dynamometr dorsální flexe P'</li>\n",
+       "\t<li>'dynamometr dorsální flexe L'</li>\n",
+       "</ol>\n"
       ],
       "text/latex": [
-       "\\begin{tabular}{r|llllllllll}\n",
-       " gonio plantární flexe P & gonio plantární flexe L & gonio dorsání flexe P & gonio dorsání flexe L & tloušťka plantární fascie (podélné) P & tloušťka plantární fascie (podélné) L & dynamometr plantární flexe P & dynamometr plantární flexe L & dynamometr dorsální flexe P & dynamometr dorsální flexe L\\\\\n",
-       "\\hline\n",
-       "\t   2        &   4        &  3         & -1         &  0.74      &  1.01      & 0.46666667 &  2.4333333 &  0.9000000 &  2.333333 \\\\\n",
-       "\t   5        &   2        & -3         & -8         & -0.09      & -0.40      & 0.50000000 & -0.5000000 & -2.1000000 &  0.200000 \\\\\n",
-       "\t   0        &  -4        & -3         &  1         & -0.25      & -0.34      & 1.93333333 &  2.8666667 &  0.6333333 &  3.866667 \\\\\n",
-       "\t   0        &  -5        &  0         &  0         & -0.25      &  0.00      & 2.30000000 & -0.6666667 &  3.2666667 &  2.933333 \\\\\n",
-       "\t -20        & -11        & -3         & -2         &  0.41      &  0.08      & 0.06666667 &  0.2333333 & -1.2000000 & -0.900000 \\\\\n",
-       "\t   0        &   1        & -2         & -4         &  0.58      &  0.18      & 2.03333333 &  0.3666667 &  1.7000000 &  1.333333 \\\\\n",
-       "\\end{tabular}\n"
+       "\\begin{enumerate*}\n",
+       "\\item 'gonio plantární flexe P'\n",
+       "\\item 'gonio plantární flexe L'\n",
+       "\\item 'gonio dorsání flexe P'\n",
+       "\\item 'gonio dorsání flexe L'\n",
+       "\\item 'tloušťka plantární fascie (podélné) P'\n",
+       "\\item 'tloušťka plantární fascie (podélné) L'\n",
+       "\\item 'dynamometr plantární flexe P'\n",
+       "\\item 'dynamometr plantární flexe L'\n",
+       "\\item 'dynamometr dorsální flexe P'\n",
+       "\\item 'dynamometr dorsální flexe L'\n",
+       "\\end{enumerate*}\n"
       ],
       "text/markdown": [
+       "1. 'gonio plantární flexe P'\n",
+       "2. 'gonio plantární flexe L'\n",
+       "3. 'gonio dorsání flexe P'\n",
+       "4. 'gonio dorsání flexe L'\n",
+       "5. 'tloušťka plantární fascie (podélné) P'\n",
+       "6. 'tloušťka plantární fascie (podélné) L'\n",
+       "7. 'dynamometr plantární flexe P'\n",
+       "8. 'dynamometr plantární flexe L'\n",
+       "9. 'dynamometr dorsální flexe P'\n",
+       "10. 'dynamometr dorsální flexe L'\n",
        "\n",
-       "| gonio plantární flexe P | gonio plantární flexe L | gonio dorsání flexe P | gonio dorsání flexe L | tloušťka plantární fascie (podélné) P | tloušťka plantární fascie (podélné) L | dynamometr plantární flexe P | dynamometr plantární flexe L | dynamometr dorsální flexe P | dynamometr dorsální flexe L |\n",
-       "|---|---|---|---|---|---|---|---|---|---|\n",
-       "|   2        |   4        |  3         | -1         |  0.74      |  1.01      | 0.46666667 |  2.4333333 |  0.9000000 |  2.333333  |\n",
-       "|   5        |   2        | -3         | -8         | -0.09      | -0.40      | 0.50000000 | -0.5000000 | -2.1000000 |  0.200000  |\n",
-       "|   0        |  -4        | -3         |  1         | -0.25      | -0.34      | 1.93333333 |  2.8666667 |  0.6333333 |  3.866667  |\n",
-       "|   0        |  -5        |  0         |  0         | -0.25      |  0.00      | 2.30000000 | -0.6666667 |  3.2666667 |  2.933333  |\n",
-       "| -20        | -11        | -3         | -2         |  0.41      |  0.08      | 0.06666667 |  0.2333333 | -1.2000000 | -0.900000  |\n",
-       "|   0        |   1        | -2         | -4         |  0.58      |  0.18      | 2.03333333 |  0.3666667 |  1.7000000 |  1.333333  |\n",
        "\n"
       ],
       "text/plain": [
-       "  gonio plantární flexe P gonio plantární flexe L gonio dorsání flexe P\n",
-       "1   2                       4                      3                   \n",
-       "2   5                       2                     -3                   \n",
-       "3   0                      -4                     -3                   \n",
-       "4   0                      -5                      0                   \n",
-       "5 -20                     -11                     -3                   \n",
-       "6   0                       1                     -2                   \n",
-       "  gonio dorsání flexe L tloušťka plantární fascie (podélné) P\n",
-       "1 -1                     0.74                                \n",
-       "2 -8                    -0.09                                \n",
-       "3  1                    -0.25                                \n",
-       "4  0                    -0.25                                \n",
-       "5 -2                     0.41                                \n",
-       "6 -4                     0.58                                \n",
-       "  tloušťka plantární fascie (podélné) L dynamometr plantární flexe P\n",
-       "1  1.01                                 0.46666667                  \n",
-       "2 -0.40                                 0.50000000                  \n",
-       "3 -0.34                                 1.93333333                  \n",
-       "4  0.00                                 2.30000000                  \n",
-       "5  0.08                                 0.06666667                  \n",
-       "6  0.18                                 2.03333333                  \n",
-       "  dynamometr plantární flexe L dynamometr dorsální flexe P\n",
-       "1  2.4333333                    0.9000000                 \n",
-       "2 -0.5000000                   -2.1000000                 \n",
-       "3  2.8666667                    0.6333333                 \n",
-       "4 -0.6666667                    3.2666667                 \n",
-       "5  0.2333333                   -1.2000000                 \n",
-       "6  0.3666667                    1.7000000                 \n",
-       "  dynamometr dorsální flexe L\n",
-       "1  2.333333                  \n",
-       "2  0.200000                  \n",
-       "3  3.866667                  \n",
-       "4  2.933333                  \n",
-       "5 -0.900000                  \n",
-       "6  1.333333                  "
+       " [1] \"gonio plantární flexe P\"              \n",
+       " [2] \"gonio plantární flexe L\"              \n",
+       " [3] \"gonio dorsání flexe P\"                \n",
+       " [4] \"gonio dorsání flexe L\"                \n",
+       " [5] \"tloušťka plantární fascie (podélné) P\"\n",
+       " [6] \"tloušťka plantární fascie (podélné) L\"\n",
+       " [7] \"dynamometr plantární flexe P\"         \n",
+       " [8] \"dynamometr plantární flexe L\"         \n",
+       " [9] \"dynamometr dorsální flexe P\"          \n",
+       "[10] \"dynamometr dorsální flexe L\"          "
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 8.54\n",
+      "[1] 7.872333\n",
+      "[1] 8.585\n",
+      "[1] 8.171667\n",
+      "[1] 10\n",
+      "[1] 9.091667\n",
+      "[1] 10.67333\n",
+      "[1] 9.14\n"
+     ]
     }
    ],
    "source": [
-    "data_rozdil <- data_pred - data_po\n",
-    "data_rozdil %>% head()"
+    "\n",
+    "colnames(data_pred)\n",
+    "for (i in 7:10){\n",
+    "    print(mean(data_pred[,i]))\n",
+    "    print(mean(data_po[, i]))\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 15,
    "id": "9a0c0365",
    "metadata": {},
    "outputs": [
@@ -820,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 16,
    "id": "a1d99f42",
    "metadata": {},
    "outputs": [
@@ -859,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 17,
    "id": "846ad141",
    "metadata": {},
    "outputs": [
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 18,
    "id": "99cc1e0e",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "id": "2530b0c9",
    "metadata": {},
    "outputs": [
@@ -1029,13 +1030,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 20,
    "id": "9ac8449f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "?pretty"
-   ]
+   "source": []
   }
  ],
  "metadata": {
